# miniml

./: .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VALIDATION_REPORT.md  package.json  pnpm-lock.yaml
crates/micro-ml-core/: Cargo.toml
crates/micro-ml-core/src/: adaboost.rs  agglomerative_complete.rs  bagging.rs  bernoulli_nb.rs  boundary_coverage.rs  classification_metrics.rs  clustering_metrics.rs  confusion_matrix.rs  cross_validation.rs  data_split.rs  decision_tree.rs  drift_detection.rs  elastic_net.rs  ensemble_discovery.rs  error.rs  extra_trees.rs  feature_engineering.rs  feature_importance.rs  gmm.rs  gradient_boosting.rs  grid_search.rs  hierarchical.rs  imputer.rs  isolation_forest.rs  kmeans_plus.rs  label_encoder.rs  lib.rs  linear_regression.rs  lof.rs  matrix.rs  mini_batch_kmeans.rs  minmax_scaler.rs  model_selection.rs  multinomial_nb.rs  ngram.rs  normalizer.rs  one_hot_encoder.rs  ordinal_encoder.rs  passive_aggressive.rs  permutation_importance.rs  (+18 more)
crates/micro-ml-core/tests/: ml_validation.rs
crates/miniml-core/: Cargo.toml  LICENSE  README.md  benches.toml
crates/miniml-core/benches/: simple_bench.rs  wasm_bench.rs
crates/miniml-core/examples/: wasm_perf.rs
crates/miniml-core/src/: adaboost.rs  advanced_cv.rs  association.rs  augmentation.rs  automl.rs  bayesian.rs  causal.rs  classification_metrics.rs  clustering_metrics.rs  confusion_matrix.rs  cross_validation.rs  dataframe.rs  dbscan.rs  decision_tree.rs  distributions.rs  elastic_net.rs  error.rs  explainability.rs  exponential.rs  gaussian_process.rs  gradient_boosting.rs  graph.rs  hierarchical.rs  imputer.rs  kernel.rs  kmeans.rs  kmeans_plus.rs  knn.rs  lib.rs  linear.rs  linear_regression.rs  logistic.rs  markov.rs  matrix.rs  minmax_scaler.rs  model_selection.rs  monte_carlo.rs  naive_bayes.rs  neural.rs  normalizer.rs  (+18 more)
crates/miniml-core/src/optimization/: annealing.rs  anomaly.rs  (+9 more)
(+111 files in other folders)
