[package]
name = "micro-ml-core"
version = "1.0.0"
edition = "2021"
authors = ["micro-ml contributors"]
description = "A tiny, blazing-fast WASM-powered machine learning library"
license = "MIT"
repository = "https://github.com/your-username/micro-ml"
keywords = ["machine-learning", "regression", "wasm", "statistics"]
categories = ["wasm", "science", "mathematics"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
