[package]
name = "miniml-core"
version = "26.4.8"
edition = "2021"
authors = ["Sean Chatman <info@chatmangpt.com>"]
description = "A minimal, blazing-fast WASM-powered machine learning library with SIMD acceleration"
license-file = "LICENSE"
repository = "https://github.com/seanchatmangpt/miniml"
keywords = ["machine-learning", "regression", "wasm", "statistics", "minimal", "simd"]
categories = ["wasm", "science", "mathematics"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["simd"]
simd = []
no-simd = []

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[[bin]]
name = "bench_all"
path = "benches/simple_bench.rs"

[[bench]]
name = "wasm_bench"
harness = false

[profile.release]
opt-level = 3        # Speed optimization
lto = true
codegen-units = 1
strip = true
panic = "abort"
